@@ -97,7 +97,7 @@ static int serbb_setpin(PROGRAMMER * pgm, int pin, int value)
 	       perror("ioctl(\"TIOCxBRK\")");
 	       return -1;
 	     }
-             return 0;
+             break;
 
     case 4:  /* dtr */
     case 7:  /* rts */
@@ -115,11 +115,16 @@ static int serbb_setpin(PROGRAMMER * pgm, int pin, int value)
 	       perror("ioctl(\"TIOCMSET\")");
 	       return -1;
  	     }
-             return 0;
+             break;
 
     default: /* impossible */
              return -1;
   }
+
+  if (pgm->ispdelay > 1)
+    bitbang_delay(pgm->ispdelay);
+
+  return 0;
 }
 
 static int serbb_getpin(PROGRAMMER * pgm, int pin)
@@ -178,12 +183,7 @@ static int serbb_highpulsepin(PROGRAMMER * pgm, int pin)
     return -1;
 
   serbb_setpin(pgm, pin, 1);
-  if (pgm->ispdelay > 1)
-    bitbang_delay(pgm->ispdelay);
-
   serbb_setpin(pgm, pin, 0);
-  if (pgm->ispdelay > 1)
-    bitbang_delay(pgm->ispdelay);
 
   return 0;
 }
